--- a/finished/index.html
+++ b/finished/index.html
@@ -179,4 +179,9 @@
         }
 
     </script>
+
+    <a-scene embedded arjs='sourceType: webcam;'>
+        <a-marker type='pattern' url='https://rawgit.com/jeromeetienne/ar.js/master/data/data/patt.hiro'>
+        </a-marker>
+    </a-scene>
 </body>
